--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
 		"chai-http": "^3.0.0",
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
+		"ejs": "^3.1.10",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"nocache": "^4.0.0",
+		"uuid": "^9.0.1"
 	},
 	"repository": {
 		"type": "git",
